ops/infra/web/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: web
  namespace: web
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - '*'
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tekton
  namespace: web
spec:
  hosts:
    - tekton.kind.io
  gateways:
    - web/web
  http:
    - name: tekton
      route:
        - destination:
            host: tekton-dashboard.tekton-pipelines.svc.cluster.local
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali
  namespace: web
spec:
  hosts:
    - kiali.kind.io
  gateways:
    - web/web
  http:
    - name: tekton
      route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
